// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignSubMenu when rendering when isPreview is false renders correctly 1`] = `
<withRouter(MenuItems)
  currentPath="/styles"
  items={
    Array [
      Object {
        "label": "Styles",
        "path": "styles",
      },
      Object {
        "label": "fred",
        "path": "section/0",
      },
      Object {
        "label": "joe",
        "path": "section/1",
      },
      Object {
        "divider": true,
        "label": "History",
        "path": "history",
      },
      Object {
        "label": "More Options",
        "path": "options",
      },
      Object {
        "externalLink": true,
        "label": "Help",
        "path": "https://support.bigcommerce.com/articles/Public/Store-Design",
      },
    ]
  }
  showArrows={true}
/>
`;

exports[`DesignSubMenu when rendering when isPreview is true renders correctly 1`] = `
<withRouter(MenuItems)
  currentPath="/styles"
  items={
    Array [
      Object {
        "label": "Styles",
        "path": "styles",
      },
      Object {
        "label": "fred",
        "path": "section/0",
      },
      Object {
        "label": "joe",
        "path": "section/1",
      },
      Object {
        "divider": true,
        "externalLink": true,
        "label": "Help",
        "path": "https://support.bigcommerce.com/articles/Public/Store-Design",
      },
    ]
  }
  showArrows={true}
/>
`;
